# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.



import("//build/lite/config/component/lite_component.gni")

lite_component("app") {
    features = [
        #"startup",
        #"lsl613_ledcontrol:lsl613_ledcontrol",
        #"23001010613_lsl_LiSonglun_blueled_blink:23001010613_lsl_LiSonglun_blueled_blink",
        #"23001010613_lsl_LiSonglun_ledblink:23001010613_lsl_LiSonglun_ledblink",
        #"23001010613_lsl_LiSonglun_pedestrian:23001010613_lsl_LiSonglun_pedestrian",
        #"23001010613_lsl_LiSonglun_selfcheck:23001010613_lsl_LiSonglun_selfcheck",
        #"23001010613_lsl_i2coled_en:i2coled",
        #"23001010613_lsl_i2cOled_cn:i2cOled_cn",
        "23001010613_lsl_i2cOled_img:i2cOled_img",
    ]
}
