# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# 复制预编译的华为云 MQTT 静态库到输出目录
copy("libiot_link") {
  sources = [ "./third_party/libs/libiot_link.a" ]
  outputs = [ "//out/hispark_pegasus/wifiiot_hispark_pegasus/libs/{{source_file_part}}" ]
}

static_library("mqtt_hwcloud_experiment") {
  sources = [
    "main_entry.c",        # 主入口：任务创建、设备初始化
    "wifi_entry.c",        # WiFi 连接
    "hw_cloud_entry.c",    # 华为云 MQTT 接入、上报、命令处理
    "aht20.c",             # AHT20 温湿度传感器驱动
    "buzzer.c",            # 蜂鸣器 PWM 驱动
    "led.c",               # LED GPIO 驱动
    "adckey.c",            # ADC 按键驱动
    "pwm_motor.c",         # 电机 PWM 驱动
    "encoder.c",           # 编码器（A/B相 GPIO）驱动
    "hal_iot_gpio_ex.c",   # IoSetFunc / IoSetPull 实现（依赖 buzzer/led/encoder）
  ]

  include_dirs = [
    "./",                  # 项目根目录（buzzer.h / led.h / encoder.h 等）

    # for 3.1.4-Release
    "//utils/native/lite/include",
    "//device/soc/hisilicon/hi3861v100/hi3861_adapter/kal/cmsis",
    "//base/iot_hardware/peripheral/interfaces/kits",

    # for 3.2-Release（二选一，编译系统会忽略不存在的路径）
    "//commonlibrary/utils_lite/include",
    "//base/iothardware/peripheral/interfaces/inner_api",
    "//kernel/liteos_m/kal/cmsis",

    # cJSON 库
    "//third_party/cJSON/",

    # WiFi 服务接口
    "//foundation/communication/wifi_lite/interfaces/wifiservice",

    # 华为云 MQTT 库头文件
    "./third_party/iot_link/oc_mqtt/oc_mqtt_al",
    "./third_party/iot_link/oc_mqtt/oc_mqtt_profile_v5",
    "./third_party/iot_link/inc",

    # OLED SSD1306 驱动头文件
    "./ssd1306",

    # lwIP 网络头文件（WiFi 连接需要）
    "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/lwip_sack/include",

    # wifiiot_lite 接口（hi_io.h 等 HiSilicon SDK 头文件）
    "//base/iot_hardware/interfaces/kits/wifiiot_lite",
  ]

  deps = [
    "ssd1306:oled_ssd1306",  # OLED 静态库（ssd1306/BUILD.gn 中定义）
    ":libiot_link",           # 华为云 MQTT 预编译库
  ]
}
