static_library("ssd1306") {
    sources = [
        "ssd1306.c",
        "ssd1306_fonts.c",
    ]

    include_dirs = [
        ".",
        "//utils/native/lite/include",
        "//base/iot_hardware/peripheral/interfaces/kits",
        "//device/hisilicon/hispark_pegasus/sdk_liteos/include",
    ]
}
